[tool.poetry]
name = "repl-nix-qcu-alumni-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_qcu_alumni_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
